# Zenith-Extension

./: .gitignore  CONFLICT_GUIDELINES.md  CONTRIBUTING.md  DEPLOY_TO_GITHUB.ps1  LICENSE  LICENSE.md  README.md  SYNC_LAUNCH.bat  ZENITH_FULL_PROJECT_HISTORY.md  ZENITH_SYSTEM_OVERVIEW.md  ZENITH_V2_ARCHITECTURE_DEBATE.md  package-lock.json  package.json  rebuild.ps1  setup_zenith.ps1  test_harness.html  zenith.code-workspace
audits/vanguard/: vanguard_audit.js
space-scroll-demo/: package.json
space-scroll-demo/src/: App.tsx
website/: index.html  package.json
website/src/: App.tsx
zenith-demo/: .gitignore  index.html  package-lock.json  package.json  vanguard_report.json  vite.config.ts  zenith.config.ts
zenith-demo/.zenith/: stage.wal
zenith-extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json  zenith.config.js  zenith.config.js.map  zenith.config.ts
zenith-next-plugin/: package.json  tsconfig.json
zenith-sidecar/: Cargo.toml  build_debug.json  check.json  check_output.txt  check_utf8.json  check_utf8.txt  compile_err.txt  final_error.txt  final_error_3.txt  final_error_4.txt  final_error_5.txt  rust_errors_final_2.txt  rust_errors_final_3.txt  rust_last.txt  sidecar_output.txt  sidecar_output_utf8.txt
zenith-sidecar/_archive/: rpc_backup.rs
zenith-sidecar/src/: lib.rs  main.rs  rpc.rs  types.rs
zenith-sidecar/src/auditor/: mod.rs
zenith-sidecar/src/conflict/: lww.rs  mod.rs  ot_engine.rs  soft_lock.rs
zenith-sidecar/src/hmr/: mod.rs
zenith-sidecar/src/hot_path/: gap_scrubber.rs  mod.rs  predictive.rs  ring_buffer.rs  smart_guides.rs  token_snapper.rs
zenith-sidecar/src/ledger/: delta.rs  mod.rs
zenith-sidecar/src/patcher/: mod.rs  strategy.rs  template_literal.rs
zenith-sidecar/src/project/: detector.rs  mod.rs
zenith-sidecar/src/proxy/: mod.rs  sandbox.rs
zenith-sidecar/src/rebase/: mod.rs
zenith-sidecar/src/stream/: draft_state.rs  mod.rs
zenith-sidecar/src/vfs/: engine.rs  ghost_registry.rs  history.rs  mock_engine.rs  mod.rs  storage.rs  wal.rs  worker.rs
zenith-vite-plugin/: package-lock.json  package.json  test-patch.tsx
(+2201 files in other folders)
