[package]
name = "zenith-sidecar"
version = "0.1.0"
edition = "2024"
description = "Zenith Visual-Agentic IDE — Rust Sidecar Engine"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Parallelism
rayon = "1.10"

# Lock-free concurrent data structures
dashmap = "6"
smallvec = { version = "1", features = ["serde"] }

# AST surgery
swc_core = { version = "*", features = [
    "ecma_parser",
    "ecma_ast",
    "ecma_visit",
    "ecma_codegen",
    "common",
] }
# cssparser = "0.34"

# Serialization
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# JSON-RPC
jsonrpsee = { version = "0.24", features = ["server", "macros"] }

# Hashing (FNV-1a for zenith-id hashing)
fnv = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Hashing for v3.7 Ghost-IDs
sha2 = "0.10"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# UUID for transaction IDs
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"

# File watching
notify = "7"
walkdir = "2"

# Shared memory (SAB interop)
memmap2 = "0.9"

# Bit flags for scrub modifiers
bitflags = "2"

# Spatial indexing (R-tree for smart guide alignment)
rstar = "0.12"

# Immutable/persistent collections (COW VFS overlays)
im = "15"

# MessagePack for Ghost-ID index serialization
rmp-serde = "1"

# CPU core detection
num_cpus = "1.16"

# Regex for surgical patching
regex = "1"
tokio-util = { version = "0.7.18", features = ["codec"] }
bytes = "1.11.1"
ctrlc = "3.5.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
